# gputools

./: DESCRIPTION  INSTALL  MD5  NAMESPACE  NEWS  README  cleanup  configure  configure.ac
R/: chooseGpu.R  fake.R  getGpuId.R  gpuCor.R  gpuCor.R.in  gpuGranger.R  gpuGranger.R.in  gpuHclust.R  gpuHclust.R.in  gpuLr.R.in  gpuMatMult.R  gpuMatMult.R.in  gpuMi.R  gpuMi.R.in  gpuQr.R  gpuQr.R.in  gpuSolve.R  gpuSvm.R.in
man/: getAucEstimate.Rd  gpuCor.Rd  gpuDist.Rd  gpuDistClust.Rd  gpuGranger.Rd  gpuHclust.Rd  gpuLr.Rd  gpuMi.Rd  gpuQr.Rd  gpuSolve.Rd  gpuSvmPredict.Rd  gpuSvmTrain.Rd  gpuTtest.Rd
src/: Makefile.in  classification.cu  classification.h  correlation.cu  correlation.h  cuseful.cu  cuseful.h  granger.cu  granger.h  hcluster.cu  lr.cu  lsfit.cu  matmult.cu  matmult.h  mi.cu  mi.h  nocuda.c  nocuda.h  qrdecomp.cu  qrdecomp.h  qrls.cu  qrls.h  rinterface.cu  rinterface.h  sort.cu
